--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,33 @@
+:root {
+  --bs-dark-rgb: #000300;
+
+  --primary-color: #ffd700;
+  --primary-rgb: rgb(255 215 0);
+}
+
 body {
-  background-color: #000300;
+  background-color: var(--bs-dark-rgb);
   color: #fff;
+}
+.navbar-dark {
+  --bs-navbar-color: #fff;
+  --bs-nav-link-color: #fff;
+}
+
+.btn-primary {
+  --on-hover: rgba(255, 215, 0, 0.8);
+
+  --bs-btn-color: var(--bs-dark-rgb);
+  --bs-btn-bg: var(--primary-color);
+  --bs-btn-border-color: var(--primary-color);
+  --bs-btn-hover-color: var(--bs-dark-rgb);
+  --bs-btn-hover-bg: var(--on-hover);
+  --bs-btn-hover-border-color: var(--on-hover);
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: var(--primary-color);
+  --bs-btn-active-border-color: var(--primary-color);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-bg: var(--primary-color);
+  --bs-btn-disabled-border-color: var(--primary-color);
 }
