--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -3,4 +3,26 @@
   padding: 0;
   box-sizing: border-box;
   font-family: THICCCBOI, Arial;
+  scroll-behavior: smooth;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #000300;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #b1b1b149;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #b1b1b180;
 }
