--- a/src/styles/team.css
+++ b/src/styles/team.css
@@ -11,11 +11,9 @@
   width: 340px;
   height: auto;
 }
-.t-card {
-  width: 100%;
-  height: 100%;
+
+div.t-card {
   padding: 50px 40px;
-  text-align: center;
 }
 
 .t-icon {
@@ -27,8 +25,8 @@
   margin-top: 20px;
 }
 
-/* width */
-
-.t-cards-grid::-webkit-scrollbar {
-  height: 3px;
+@media (max-width: 991.98px) {
+  .t-container {
+    flex-shrink: 0;
+  }
 }
