--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,8 +1,9 @@
 :root {
   --bs-dark-rgb: #000300;
-
+  --btn-green-rgb: #a9f9a8;
   --primary-color: #ffd700;
   --primary-rgb: rgb(255 215 0);
+  --secondary-color: #a9f9a8;
   --primary-dark: var(--bs-dark-rgb);
 }
 
@@ -31,6 +32,23 @@ body {
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
   --bs-btn-disabled-bg: var(--primary-color);
   --bs-btn-disabled-border-color: var(--primary-color);
+}
+.btn-secondary {
+  --on-hover: rgba(169, 249, 168, 1);
+
+  --bs-btn-color: var(--bs-dark-rgb);
+  --bs-btn-bg: var(--secondary-color);
+  --bs-btn-border-color: var(--secondary-color);
+  --bs-btn-hover-color: var(--bs-dark-rgb);
+  --bs-btn-hover-bg: var(--on-hover);
+  --bs-btn-hover-border-color: var(--on-hover);
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: var(--secondary-color);
+  --bs-btn-active-border-color: var(--secondary-color);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-bg: var(--secondary-color);
+  --bs-btn-disabled-border-color: var(--secondary-color);
 }
 
 @-webkit-keyframes updown {
