--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -75,7 +75,7 @@ body {
 }
 
 div.card-main {
-  background: #0c0b0b;
+  background: #000000;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25),
     inset 0px 0px 83px 6px rgba(255, 255, 255, 0.13);
   border-radius: 34px;
