--- a/src/styles/landingPageHero.css
+++ b/src/styles/landingPageHero.css
@@ -2,6 +2,7 @@
   margin-top: 15rem;
   padding: 0;
 }
+
 .grid {
   display: flex;
   gap: 5px;
@@ -23,6 +24,10 @@
   font-size: 1.2rem;
   font-weight: 300;
   line-height: 1.5;
+}
+
+.button-container {
+  margin-top: 50px;
 }
 
 .card-container {
@@ -111,6 +116,14 @@
   .card-container {
     --position-top: 100px;
     margin-right: auto;
+  }
+  .container-hero {
+    margin-top: 4rem;
+  }
+
+  .button-container {
+    display: flex;
+    justify-content: center;
   }
 }
 
