--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -10,3 +10,12 @@
   width: 40px;
   height: 40px;
 }
+@media (max-width: 991.98px) {
+  footer h5 {
+    font-size: 1rem;
+  }
+  .footer-icon {
+    width: 30px;
+    height: 30px;
+  }
+}
