--- a/src/styles/howtToStart.css
+++ b/src/styles/howtToStart.css
@@ -87,6 +87,10 @@ div.accordion-item {
     max-height: 350px;
     width: auto;
   }
+
+  .accordion-container {
+    margin-top: 0;
+  }
 }
 
 /* // Small devices (landscape phones, less than 768px) */
