--- a/src/styles/landingPageHero.css
+++ b/src/styles/landingPageHero.css
@@ -103,10 +103,17 @@
 
 /* // Small devices (landscape phones, less than 768px) */
 @media (max-width: 767.98px) {
+  .busd-icon {
+    max-width: 100px;
+    max-height: 100px;
+  }
 }
 
 /* // Medium devices (tablets, less than 992px) */
 @media (max-width: 991.98px) {
+  .intro-para {
+    font-size: 1.1rem;
+  }
   .grid {
     flex-wrap: wrap;
   }
@@ -114,16 +121,48 @@
     width: 100%;
   }
   .card-container {
-    --position-top: 100px;
+    max-width: 90%;
+    --position-top: 50px;
     margin-right: auto;
+    min-height: 380px;
+    padding-top: 2rem;
   }
+
+  .card-text h3 {
+    margin-top: 13px;
+    margin-left: 46px;
+    padding-bottom: 2px;
+  }
+
   .container-hero {
     margin-top: 4rem;
+  }
+
+  .container-hero h1 {
+    font-size: 2.5rem;
   }
 
   .button-container {
     display: flex;
     justify-content: center;
+  }
+
+  .busd-icon {
+    max-width: 150px;
+    max-height: 150px;
+  }
+
+  .busd-icon-top {
+    top: -80px;
+  }
+  .busd-icon-bottom-left {
+    top: 35%;
+    right: 25px;
+  }
+
+  .busd-icon-bottom-right {
+    bottom: 0px;
+    left: -40px;
   }
 }
 
