styling: add font family

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: THICCCBOI;
+  src: url("assets/fonts/THICCCBOI-Regular.ttf");
+}
+@font-face {
+  font-family: THICCCBOI;
+  src: url("assets/fonts/THICCCBOI-Bold.ttf");
+  font-weight: bold;
+}
+
 * {
   margin: 0;
   padding: 0;
