styling: update dapp overview component

--- a/src/styles/dapp.css
+++ b/src/styles/dapp.css
@@ -1,3 +1,41 @@
+/* common */
+
+.heading {
+  font-size: 1.9rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+  --displacement: 15px;
+  margin-left: var(--displacement);
+  width: (100% - var(--displacement));
+}
+
+/* Overview Section */
+
+div.overview-container {
+  margin-top: 100px;
+  --bs-gutter-x: 0;
+}
+
+.overview-section {
+  padding: 30px 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  flex-wrap: wrap;
+}
+
+.overview-item h5 {
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+.overview-item p {
+  margin-bottom: 0;
+  font-size: 1.12rem;
+  font-weight: bold;
+}
+
 /* container-section-two */
 .container-section-two {
   display: grid;
@@ -9,14 +47,6 @@
   display: grid;
   column-gap: 30px;
   grid-template-columns: 1fr 1.8fr;
-}
-.overview-grid-section {
-  display: flex;
-  justify-content: space-between;
-  padding: 15px 40px;
-  text-align: center;
-  align-items: center;
-  flex-wrap: wrap;
 }
 
 /* invest */
@@ -229,11 +259,10 @@
 }
 
 @media (max-width: 767.98px) {
-  .overview-grid-section {
-    padding: 15px 20px;
-    align-items: center;
-    gap: 30px;
+  .overview-section {
+    padding: 30px 20px;
     justify-content: center;
+    gap: 30px;
   }
   .button-section {
     margin-left: 10px;
