--- a/src/styles/dapp/index.css
+++ b/src/styles/dapp/index.css
@@ -2,7 +2,31 @@
   font-size: 1.9rem;
   font-weight: bold;
   margin-bottom: 1rem;
-  --displacement: 15px;
+  --displacement: 20px;
   margin-left: var(--displacement);
   width: (100% - var(--displacement));
+}
+
+.container-section-two {
+  display: grid;
+  column-gap: 30px;
+  grid-template-columns: 1.8fr 1fr;
+}
+
+/* // Medium devices (tablets, less than 992px) */
+@media (max-width: 991.98px) {
+  .container-section-two {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* // Small devices (landscape phones, less than 768px) */
+@media (max-width: 767.98px) {
+  .cards-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+/* // X-Small devices (portrait phones, less than 576px) */
+@media (max-width: 575.98px) {
 }
