--- a/src/styles/dapp/invest.css
+++ b/src/styles/dapp/invest.css
@@ -8,5 +8,136 @@
 }
 
 .invest-card {
-  padding: 30px 20px;
+  padding: 40px 35px;
+}
+
+.invest-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.invest-busd-icon {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.invest-busd-icon p {
+  margin: 0;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.invest-busd-icon .icon {
+  max-width: 80px;
+  max-height: 80px;
+  width: 100%;
+  height: 100%;
+}
+.invest-info {
+  padding-right: 25px;
+}
+
+h5.invest-title,
+p.invest-para {
+  font-weight: bold;
+}
+h5.invest-title {
+  margin: 0;
+  font-size: 1.3rem;
+}
+
+p.invest-para {
+  font-size: 1.12rem;
+}
+
+.invest-input {
+  margin-top: 30px;
+  position: relative;
+  max-width: 65%;
+  width: 100%;
+  --button-width: 110px;
+}
+
+.invest-input input {
+  border: 1px solid var(--primary-color);
+  border-radius: 8px 0px 0px 8px;
+  width: calc(100% - var(--button-width));
+  padding: 12px 10px;
+}
+.invest-button {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: var(--button-width);
+  bottom: 0;
+}
+
+.invest-button button {
+  border-radius: 0px 8px 8px 0px;
+  width: 100%;
+  height: 100%;
+}
+
+.button-section {
+  margin-left: 70px;
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+  max-width: 500px;
+}
+
+.invest-grid-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 20px;
+}
+
+.invest-gird-inner {
+  text-align: center;
+}
+
+.invest-gird-inner p {
+  margin: 0;
+}
+
+/* // X-Large devices (large desktops, less than 1400px) */
+@media (max-width: 1399.98px) {
+}
+
+/* // Large devices (desktops, less than 1200px) */
+@media (max-width: 1199.98px) {
+  .invest-input {
+    max-width: 75%;
+  }
+}
+@media (max-width: 991.98px) {
+  .invest-input {
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .button-section {
+    margin-left: 20px;
+    max-width: 300px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .invest-card {
+    padding: 40px 15px;
+  }
+
+  .button-section {
+    margin-left: 10px;
+    max-width: 300px;
+  }
+  .invest-grid-section {
+    row-gap: 20px;
+    display: grid;
+    gap: 30px;
+    grid-template-columns: 1fr 1fr;
+  }
 }
