fix: fetch deposit history

--- a/src/styles/dapp/depositHistory.css
+++ b/src/styles/dapp/depositHistory.css
@@ -45,6 +45,10 @@
   color: #6c6a6a;
 }
 
+.duration-item span {
+  font-size: 1.1rem;
+}
+
 /* // Large devices (desktops, less than 1200px) */
 @media (max-width: 1199.98px) {
 }
