--- a/src/styles/dapp/referral.css
+++ b/src/styles/dapp/referral.css
@@ -24,13 +24,14 @@ div.progress-bar {
   justify-content: space-between;
   align-items: center;
 
-  --button-width: 200px;
+  --button-width: 150px;
 }
 
 .referral-info-inner {
   display: flex;
   justify-content: space-between;
   width: calc(100% - var(--button-width));
+  gap: 10px;
 }
 
 .referral-info-inner > div {
@@ -50,6 +51,13 @@ div.progress-bar {
   font-weight: bold;
 }
 
+/* // X-Small devices (portrait phones, less than 576px) */
+@media (max-width: 475.98px) {
+  .referral-info-inner {
+    flex-wrap: wrap;
+  }
+}
+
 @media (max-width: 991.98px) {
   .referral-info {
     flex-wrap: wrap;
@@ -65,7 +73,4 @@ div.progress-bar {
     width: 95%;
     margin: 20px auto;
   }
-}
-
-@media (max-width: 767.98px) {
 }
