--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -119,7 +119,8 @@ div.card-main {
   text-align: center;
 }
 
-.custom-scrollbar-cards::-webkit-scrollbar {
+.custom-scrollbar-cards::-webkit-scrollbar,
+.table-responsive::-webkit-scrollbar {
   height: 3px;
 }
 
