--- a/src/styles/livetrade.css
+++ b/src/styles/livetrade.css
@@ -57,20 +57,21 @@
 }
 
 ul.pagination {
-  --bs-pagination-border-width: 0;
+  --bs-pagination-border-width: 1px;
   --bs-pagination-font-size: 1.03rem;
 
-  --bs-pagination-bg: green;
+  --bs-pagination-bg: var(--primary-dark);
 
-  --bs-pagination-border-color: var(--primary-dark);
+  --bs-pagination-border-color: #ffffff6b;
   --bs-pagination-hover-color: var(--primary-dark);
   --bs-pagination-focus-bg: var(--primary-dark);
   --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0);
-  --bs-pagination-color: red;
-  --bs-pagination-hover-bg: green;
-  --bs-pagination-hover-border-color: green;
-  --bs-pagination-disabled-border-color: green;
-  --bs-pagination-disabled-bg: rgb(0, 13, 128);
+  --bs-pagination-color: #fff;
+  --bs-pagination-hover-bg: var(--primary-color);
+  --bs-pagination-hover-border-color: #ffffff6b;
+  --bs-pagination-disabled-border-color: #ffffff6b;
+  --bs-pagination-disabled-bg: var(--primary-dark);
   --bs-pagination-disabled-color: #fff;
-  --bs-pagination-active-color: rgb(206, 117, 0);
+  --bs-pagination-focus-color: #fff;
+  --bs-pagination-active-color: var(--primary-color);
 }
