--- a/src/styles/dapp/index.css
+++ b/src/styles/dapp/index.css
@@ -54,3 +54,9 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+img.vip-icon {
+  position: absolute;
+  bottom: -5px;
+  left: -5px;
+}
